--- a/app/src/main/res/xml/demo_widget_info.xml
+++ b/app/src/main/res/xml/demo_widget_info.xml
@@ -5,6 +5,6 @@
     android:minWidth="110dp"
     android:minHeight="110dp"
     android:previewImage="@drawable/example_appwidget_preview"
-    android:resizeMode="horizontal|vertical"
+    android:resizeMode="none"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen"></appwidget-provider>
